--- a/FilmStock/es.lproj/Localizable.strings
+++ b/FilmStock/es.lproj/Localizable.strings
@@ -136,6 +136,12 @@
 "about.emailNotAvailable.title" = "Correo no disponible";
 "about.emailNotAvailable.message" = "Por favor contáctame en hello@halbe.no";
 
+// MARK: - Legal
+"legal.privacyPolicy" = "Política de privacidad";
+"legal.termsOfService" = "Términos de servicio";
+"legal.copyright" = "© 2024 Jonas Halbe. Todos los derechos reservados.";
+"legal.lastUpdated" = "Última actualización: noviembre de 2024";
+
 // MARK: - Support / Buy Me a Coffee
 "support.title" = "Soporte";
 "support.buyMeCoffee" = "Invítame un café";
