--- a/FilmStock/de.lproj/Localizable.strings
+++ b/FilmStock/de.lproj/Localizable.strings
@@ -139,7 +139,7 @@
 // MARK: - Legal
 "legal.privacyPolicy" = "Datenschutzerklärung";
 "legal.termsOfService" = "Nutzungsbedingungen";
-"legal.copyright" = "© 2024 Jonas Halbe. Alle Rechte vorbehalten.";
+"legal.copyright" = "© %d Jonas Halbe. Alle Rechte vorbehalten.";
 "legal.lastUpdated" = "Letzte Aktualisierung: November 2024";
 
 // MARK: - Support / Buy Me a Coffee
