--- a/FilmStock/ja.lproj/Localizable.strings
+++ b/FilmStock/ja.lproj/Localizable.strings
@@ -139,7 +139,7 @@
 // MARK: - Legal
 "legal.privacyPolicy" = "プライバシーポリシー";
 "legal.termsOfService" = "利用規約";
-"legal.copyright" = "© 2024 Jonas Halbe. 無断転載禁止。";
+"legal.copyright" = "© %d Jonas Halbe. 無断転載禁止。";
 "legal.lastUpdated" = "最終更新：2024年11月";
 
 // MARK: - Support / Buy Me a Coffee
