--- a/FilmStock/en.lproj/Localizable.strings
+++ b/FilmStock/en.lproj/Localizable.strings
@@ -174,6 +174,11 @@
 // MARK: - Error Messages
 "error.cannotDelete.title" = "Cannot Remove Film";
 "error.cannotDeleteLoaded" = "\"%@\" is currently loaded in a camera. Please unload it first before removing.";
+"error.nameEmpty" = "Film name cannot be empty";
+"error.invalidYear" = "Year must be between 1950 and 2100";
+"error.invalidMonth" = "Month must be between 01 and 12";
+"error.invalidDate" = "Invalid date format";
+"error.invalidDateFormat" = "Date must be YYYY or MM/YYYY";
 
 // MARK: - Load Film
 "load.title" = "Load Film";
