--- a/FilmStock/fr.lproj/Localizable.strings
+++ b/FilmStock/fr.lproj/Localizable.strings
@@ -174,6 +174,11 @@
 // MARK: - Error Messages
 "error.cannotDelete.title" = "Impossible de retirer le film";
 "error.cannotDeleteLoaded" = "\"%@\" est actuellement chargé dans un appareil. Veuillez d'abord le décharger avant de le retirer.";
+"error.nameEmpty" = "Le nom du film ne peut pas être vide";
+"error.invalidYear" = "L'année doit être entre 1950 et 2100";
+"error.invalidMonth" = "Le mois doit être entre 01 et 12";
+"error.invalidDate" = "Format de date invalide";
+"error.invalidDateFormat" = "La date doit être AAAA ou MM/AAAA";
 
 // MARK: - Load Film
 "load.title" = "Charger le film";
