--- a/FilmStock/no.lproj/Localizable.strings
+++ b/FilmStock/no.lproj/Localizable.strings
@@ -174,6 +174,11 @@
 // MARK: - Error Messages
 "error.cannotDelete.title" = "Kan ikke fjerne film";
 "error.cannotDeleteLoaded" = "\"%@\" er for øyeblikket innlagt i et kamera. Vennligst ta den ut først før du fjerner.";
+"error.nameEmpty" = "Filmnavn kan ikke være tomt";
+"error.invalidYear" = "År må være mellom 1950 og 2100";
+"error.invalidMonth" = "Måned må være mellom 01 og 12";
+"error.invalidDate" = "Ugyldig datoformat";
+"error.invalidDateFormat" = "Dato må være ÅÅÅÅ eller MM/ÅÅÅÅ";
 
 // MARK: - Load Film
 "load.title" = "Legg inn film";
