--- a/FilmStock/pl.lproj/Localizable.strings
+++ b/FilmStock/pl.lproj/Localizable.strings
@@ -174,6 +174,11 @@
 // MARK: - Error Messages
 "error.cannotDelete.title" = "Nie można usunąć filmu";
 "error.cannotDeleteLoaded" = "\"%@\" jest obecnie załadowany w aparacie. Proszę najpierw go wyjąć przed usunięciem.";
+"error.nameEmpty" = "Nazwa filmu nie może być pusta";
+"error.invalidYear" = "Rok musi być pomiędzy 1950 a 2100";
+"error.invalidMonth" = "Miesiąc musi być pomiędzy 01 a 12";
+"error.invalidDate" = "Nieprawidłowy format daty";
+"error.invalidDateFormat" = "Data musi być w formacie RRRR lub MM/RRRR";
 
 // MARK: - Load Film
 "load.title" = "Załaduj film";
