--- a/FilmStock/ja.lproj/Localizable.strings
+++ b/FilmStock/ja.lproj/Localizable.strings
@@ -230,7 +230,7 @@
 
 // MARK: - Help
 "help.collection.title" = "マイコレクション";
-"help.collection.message" = "これは、カスタムフィルムリマインダーカード写真のギャラリーです。フィルムの追加または編集中にカメラで写真を撮ると、ここに表示されます。これらの写真は、フィルムボックスの外観を思い出すのに役立ち、素早い識別に便利です。不要になった画像は削除でき、お気に入りのフィルムを再注文する場合は再利用できます。";
+"help.collection.message" = "これは、カスタムフィルムリマインダーカードのギャラリーです。フィルムの追加または編集中にカメラで写真を撮ると、ここに表示されます。不要になった画像は削除でき、お気に入りのフィルムを再注文する場合は再利用できます。";
 "help.loadedFilms.title" = "装填中のフィルム";
 "help.loadedFilms.message" = "このビューには、カメラに現在装填されているすべてのフィルムが表示されます。マイフィルムタブからフィルムを装填すると、カメラ名と装填日とともにここに表示されます。ロールを撮り終えたら、フィルムを左にスワイプして取り出します。";
 
