--- a/FilmStock/no.lproj/Localizable.strings
+++ b/FilmStock/no.lproj/Localizable.strings
@@ -141,6 +141,7 @@
 "legal.termsOfService" = "Vilkår for bruk";
 "legal.copyright" = "© %d Jonas Halbe. Alle rettigheter reservert.";
 "legal.lastUpdated" = "Sist oppdatert: november 2024";
+"legal.englishOnly" = "Dette dokumentet er kun tilgjengelig på engelsk.";
 
 // MARK: - Support / Buy Me a Coffee
 "support.title" = "Støtte";
