--- a/FilmStock/en.lproj/Localizable.strings
+++ b/FilmStock/en.lproj/Localizable.strings
@@ -141,6 +141,7 @@
 "legal.termsOfService" = "Terms of Service";
 "legal.copyright" = "© %d Jonas Halbe. All rights reserved.";
 "legal.lastUpdated" = "Last updated: November 2024";
+"legal.englishOnly" = "This document is provided in English only.";
 
 // MARK: - Support / Buy Me a Coffee
 "support.title" = "Support";
