--- a/FilmStock/es.lproj/Localizable.strings
+++ b/FilmStock/es.lproj/Localizable.strings
@@ -141,6 +141,7 @@
 "legal.termsOfService" = "Términos de servicio";
 "legal.copyright" = "© %d Jonas Halbe. Todos los derechos reservados.";
 "legal.lastUpdated" = "Última actualización: noviembre de 2024";
+"legal.englishOnly" = "Este documento se proporciona solo en inglés.";
 
 // MARK: - Support / Buy Me a Coffee
 "support.title" = "Soporte";
