--- a/FilmStock/fr.lproj/Localizable.strings
+++ b/FilmStock/fr.lproj/Localizable.strings
@@ -141,6 +141,7 @@
 "legal.termsOfService" = "Conditions d'utilisation";
 "legal.copyright" = "© %d Jonas Halbe. Tous droits réservés.";
 "legal.lastUpdated" = "Dernière mise à jour : novembre 2024";
+"legal.englishOnly" = "Ce document est fourni en anglais uniquement.";
 
 // MARK: - Support / Buy Me a Coffee
 "support.title" = "Soutien";
