--- a/FilmStock/ja.lproj/Localizable.strings
+++ b/FilmStock/ja.lproj/Localizable.strings
@@ -141,6 +141,7 @@
 "legal.termsOfService" = "利用規約";
 "legal.copyright" = "© %d Jonas Halbe. 無断転載禁止。";
 "legal.lastUpdated" = "最終更新：2024年11月";
+"legal.englishOnly" = "この文書は英語でのみ提供されています。";
 
 // MARK: - Support / Buy Me a Coffee
 "support.title" = "サポート";
