--- a/FilmStock/pl.lproj/Localizable.strings
+++ b/FilmStock/pl.lproj/Localizable.strings
@@ -141,6 +141,7 @@
 "legal.termsOfService" = "Warunki korzystania";
 "legal.copyright" = "© %d Jonas Halbe. Wszelkie prawa zastrzeżone.";
 "legal.lastUpdated" = "Ostatnia aktualizacja: listopad 2024";
+"legal.englishOnly" = "Ten dokument jest dostępny tylko w języku angielskim.";
 
 // MARK: - Support / Buy Me a Coffee
 "support.title" = "Wsparcie";
