fixed #49 and fixed #67 added a forzen toggle in the add and edit film view added frozen chip to card view removed localization for frozen and expired chip make sure to update screenshots in appstore!

--- a/FilmStock/en.lproj/Localizable.strings
+++ b/FilmStock/en.lproj/Localizable.strings
@@ -37,6 +37,8 @@
 "film.quantity" = "Quantity";
 "film.expiryDate" = "Expiry Date";
 "film.comments" = "Comments";
+"film.isFrozen" = "Film is frozen";
+"film.frozen" = "FROZEN";
 "film.filmInformation" = "Film Information";
 "film.filmReminder" = "Film reminder";
 "film.addExpiryDate" = "Add Expiry Date";
