Switched to versoin 1.1 fixed #72 - added frozen filter

--- a/FilmStock/de.lproj/Localizable.strings
+++ b/FilmStock/de.lproj/Localizable.strings
@@ -92,6 +92,7 @@
 "filter.filmSpeed" = "Empfindlichkeit";
 "filter.options" = "Optionen";
 "filter.showExpiredOnly" = "Nur abgelaufene anzeigen";
+"filter.showFrozenOnly" = "Nur eingefrorene anzeigen";
 "filter.clearAll" = "Alle löschen";
 "filter.apply" = "Anwenden";
 "filter.reset" = "Zurücksetzen";
